--- a/src/ExpertFinder/appsettings.Development.json
+++ b/src/ExpertFinder/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "SearchEngine": {
+    "Endpoint": "http://localhost:8080"
   }
 }
