--- a/src/ExpertFinder.Weaviate/ExpertFinder.Weaviate.csproj
+++ b/src/ExpertFinder.Weaviate/ExpertFinder.Weaviate.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
+    <PackageReference Include="StrawberryShake.Server" Version="13.5.1" />
     <PackageReference Include="System.Net.Http.Json" Version="7.0.1" />
   </ItemGroup>
 
