--- a/src/ExpertFinder/ExpertFinder.csproj
+++ b/src/ExpertFinder/ExpertFinder.csproj
@@ -22,6 +22,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="StrawberryShake.Server" Version="13.5.1" />
   </ItemGroup>
 
   <ItemGroup>
